--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="gameOver">Welcome to Run Dora</div>
         <div class="dora"></div>
         <div id="scoreCont">Your Score: 0</div>
+        <div class="bird birdlb"></div>
         <div class="obstacle obstacleAni"></div>
 
         <!-- Nút điều khiển -->
